@@ -162,6 +162,19 @@
          <item row="6" column="1">
           <widget class="SpinBox" name="dynamizerPort"/>
          </item>
+         <item row="7" column="0">
+          <widget class="BuddyLabel" name="streamUrlLabel">
+           <property name="text">
+            <string>HTTP stream URL:</string>
+           </property>
+           <property name="buddy">
+            <cstring>streamUrl</cstring>
+           </property>
+          </widget>
+         </item>
+         <item row="7" column="1">
+          <widget class="LineEdit" name="streamUrl"/>
+         </item>
         </layout>
        </item>
        <item row="1" column="0">
@@ -243,6 +256,32 @@
         </widget>
        </item>
        <item row="7" column="0">
+        <spacer name="verticalSpacer_streamUrlNote">
+         <property name="orientation">
+          <enum>Qt::Vertical</enum>
+         </property>
+         <property name="sizeType">
+          <enum>QSizePolicy::Fixed</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>20</width>
+           <height>13</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+       <item row="8" column="0" colspan="2">
+        <widget class="QLabel" name="streamUrlNoteLabel">
+         <property name="text">
+          <string>&lt;i&gt;&lt;b&gt;NOTE:&lt;/b&gt; 'HTTP Stream URL' is only of use if you have MPD configured to output to a HTTP stream, and you wish Cantata to be able to play that stream.&lt;/i&gt;</string>
+         </property>
+         <property name="wordWrap">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+       <item row="9" column="0">
         <spacer name="verticalSpacer_2">
          <property name="orientation">
           <enum>Qt::Vertical</enum>
